--- a/.gitignore
+++ b/.gitignore
@@ -160,5 +160,20 @@ bin/*
 target/*
 *.project
 *.classpath
-*.class
-pom.xml
+
+
+######################
+######   Maven  ######
+######################
+
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
